<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:padding="@dimen/size8dp"
    tools:context="codemargonda.david.com.myfirstapp.OurLinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9f7f7"
            android:orientation="vertical"
            android:padding="@dimen/size16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kursus_terbaru"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selalu_ada_yang_baru_loh"
                android:textSize="@dimen/size14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16dp"
            android:background="#f9f7f7"
            android:orientation="vertical"
            android:padding="@dimen/size16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kursus Terpopuler"
                android:textSize="@dimen/size20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selalu_ada_yang_baru_loh"
                android:textSize="@dimen/size14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kursus_terlaris"
                android:textSize="@dimen/size20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selalu_ada_yang_baru_loh"
                android:textSize="@dimen/size14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="@dimen/size18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/code_course_camp"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
